updated site root

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "extra": {
         "drupal-scaffold": {
             "locations": {
-                "web-root": "./"
+                "web-root": "./web"
             }
         },
         "installer-paths": {
